removed a package and fixed its gap

--- a/DeltaDucks.Web/Content/Site.less
+++ b/DeltaDucks.Web/Content/Site.less
@@ -328,3 +328,37 @@ padding: 7px 20px;*/
         text-align: center;
         font-size: 18px;
 }
+
+/* Card */
+.app-card {
+    background-color: #57BC90 !important;
+    border-radius: 10px;
+
+    .app-card-block {
+        text-align: center;
+
+        .app-card-title {
+            color: #015249;
+        }
+    }
+
+    .app-card-content {
+        text-align: center;
+        padding: 20px;
+        color: white;
+        .cnt {
+            top: 3px;
+            right: 28px;
+        }
+    }
+
+    .app-card-action {
+        background-color: #A5A5Af;
+        padding: 10px;
+
+        > a {
+            color: white;
+            text-decoration: none;
+        }
+    }
+}
